# Devkit

./: .gitignore  1.txt  CHANGELOG.md  DEMO_SCRIPT.md  DevKit-Zero_project_charter.md  MERGE_GUIDE.md  MERGE_QUICK.md  MERGE_SIMPLE.md  MERGE_STEPS.md  README.md  UPLOAD_GUIDE.md  USER_GUIDE.md  demo_import.py  pyproject.toml  requirements-dev.txt  requirements.txt  sample_data.csv.txt  sample_data.json.txt  setup.py  start_gui.bat  start_gui.sh  tempCodeRunnerFile.py  temp_head.py  temp_linJunyu.py  test_imports.py  unused_function.py
.github/workflows/: README.md
assets/: README.md
devkit_zero/: __init__.py  __version__.py  cli.py  core.py  gui_main.py
devkit_zero/tools/: FormatDetector.py  Robot_checker.py  __init__.py  api_contract_diff.py  batch_process.py  converter.py  diff_tool.py  formatter.py  linter.py  markdown_preview.py  port_checker.py  random_gen.py  regex_tester.py  unused_func_detector.py
devkit_zero/ui/: __init__.py  gui_app.py
devkit_zero/utils/: __init__.py
docs/: README.md
docs/development/: API_DESIGN.md  PROJECT_FRAMEWORK.md  TOOL_TEMPLATE.md
docs/reference/: GUI_APP.md  GUI_TEST_CASES.md  IMPORT_GUIDE.md  QUICK_REFERENCE.md  UNUSED_FUNC_DETECTOR.md
docs/team/: BEGINNER_GUIDE.md  TASK_ASSIGNMENT.md  TEAM_GUIDELINES.md
static/: README.md
templates/: README.md
tests/: conftest.py
tests/test_tools/: contract_users_v1.json  contract_users_v2.json  openapi_orders_v1.json  openapi_orders_v2.json  test_api_contract_diff_unittest.py  test_formatter.py  test_port_checker.py  test_unused_func_detector.py
(+1 files in other folders)
