[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "devkit-zero"
version = "0.1.0"
description = "A lightweight, zero-dependency developer toolkit"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "DevKit-Zero Team", email = "your-team@example.com"}
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "flake8>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/your-username/devkit"
Repository = "https://github.com/your-username/devkit.git"
Documentation = "https://github.com/your-username/devkit/tree/main/docs"
"Bug Tracker" = "https://github.com/your-username/devkit/issues"

[project.scripts]
devkit-zero = "devkit_zero.cli:main"

[project.gui-scripts]
devkit-zero-gui = "devkit_zero.gui_main:main"
